# split_summerize

./: main.py  pyproject.toml  requirements.txt
