[tool.poetry]
name = "003-streamlit-split-and-summarize"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
streamlit = "^1.37.0"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
langchain-community = "^0.2.10"
pypdf = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
